tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_ban_mutable_globals/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Only `comptime` globals may be mutable
  ┌─ src/main.nr:2:20
  │
2 │         mut global FOO: Field = 0;
  │                    ---
  │

Aborting due to 1 previous error
